# ClimeCapsule

./: .gitignore  CLAUDE.md  README.md  api.py  config.ini.example  db_setup.py  preview.html  pyproject.toml
plans/: 001-show-total-precipitation.md
static/: style.css
templates/: index.html  weather.html
weather/: clime_capsule.py  db.py
